# mldsa-native-esp32

./: .gitignore  CMakeLists.txt  LICENSE  README.md  idf_component.yml
config/: mldsa_config_esp32.h
examples/basic_sign_verify/: CMakeLists.txt  sdkconfig.defaults
examples/basic_sign_verify/main/: CMakeLists.txt  main.c
include/: ml_dsa.h
test_apps/ml_dsa_tests/: CMakeLists.txt  sdkconfig.defaults
test_apps/ml_dsa_tests/main/: CMakeLists.txt  test_ml_dsa.c
